fixes of readability and code structure

--- a/src/App.css
+++ b/src/App.css
@@ -60,5 +60,5 @@ body {
   margin: 0 1rem;
   background: #afafaf;
   width: 1px;
-  height: 20rem;
+  height: 25rem;
 }
