--- a/src/components/carForm.css
+++ b/src/components/carForm.css
@@ -27,7 +27,7 @@
     border: 1px solid #ccc;
 }
 
-.car-form > button{
+.car-form > button[type="submit"]{
     margin: 10px;
     padding: 10px;
     width: 100%;
@@ -37,8 +37,22 @@
     cursor: pointer;
 }
 
-.car-form > button:hover{
+.car-form > button[type="submit"]:hover{
     background-color: #00c77f;
+}
+
+.car-form > button[type="reset"]{
+    margin: 10px;
+    padding: 10px;
+    width: 100%;
+    border-radius: 5px;
+    border:0;
+    background-color: #909090;
+    cursor: pointer;
+}
+
+.car-form > button:hover[type="reset"]{
+    background-color: #a4a4a4;
 }
 
 .error{
