--- a/src/components/carList.css
+++ b/src/components/carList.css
@@ -4,7 +4,7 @@
     margin-left: 1rem;
     overflow-y: scroll;
     overflow-x: hidden;
-    height: 18rem;
+    height: 20rem;
     width: 15rem;
 }
 
